# facility-hub

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  facilityhub.sln  package.json
.github/workflows/: build.yaml  release.yaml
api/: .gitignore  facility-hub.sln
api/facility-hub/: Dockerfile  FacilityHubDbContext.cs  Startup.cs  facility-hub.csproj
facility-hub/facility-hub/: facility-hub.csproj
facilityhub/: .env  .env.example  .gitignore  Config.cs  FacilityHubDbContext.cs  Mappings.cs  Program.cs  Startup.cs  WeatherForecast.cs  facilityhub.csproj
facilityhub/ClientApp/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.js
facilityhub/Controllers/: ApiController.cs  AuthController.cs  FacilitiesController.cs  InvitationsController.cs  IssuesController.cs  StatisticsController.cs  UsersController.cs
facilityhub/DataContext/: FacilityHubDbContext.cs
facilityhub/Enums/: DocumentType.cs  FacilityInvitationType.cs  IssueStatus.cs
facilityhub/Extensions/: ActionContextExtensions.cs  AuthenticationExtensions.cs  StringExtensions.cs
facilityhub/Helpers/: EmailTemplateHelpers.cs
facilityhub/Migrations/: 20231210165000_CreateUsersFacilitiesAndIssues.Designer.cs  20231221195533_AddTenantAndTenancyHistory.Designer.cs  20231221195533_AddTenantAndTenancyHistory.cs  20231221204623_AddDocumentToTenantsAndFacilities.Designer.cs  20231221204623_AddDocumentToTenantsAndFacilities.cs  20231230141752_TrackExternalIdOnDocumentsTable.Designer.cs  20231230141752_TrackExternalIdOnDocumentsTable.cs  (+23 more)
src/: main.rs
(+222 files in other folders)
