[package]
name = "facility-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bcrypt = "0.15.0"
dotenv = "0.15.0"
mongodb = "2.7.0"
futures = "0.3.23"
env_logger = "0.10.0"
chrono = { version = "0.4.22", features = ["serde"] }
jsonwebtoken = "=7.2"
