[package]
name = "facility-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bcrypt = "0.15.0"
dotenv = "0.15.0"
futures = "0.3.23"
jsonwebtoken = "=7.2"
mongodb = "2.7.0"
serde = { version = "1.0.190", features = [] }
